--- a/style.scss
+++ b/style.scss
@@ -11,3 +11,4 @@
 @import "./scss/wishlist/wishlist-intro";
 @import "./scss/cart/all";
 @import "./scss/chec-out/chec-out-all";
+@import "./scss/accaunt/all";
