Loyiha to'liq yakullandi

--- a/scss/wishlist/_wishlist-intro.scss
+++ b/scss/wishlist/_wishlist-intro.scss
@@ -92,6 +92,8 @@
                         top: 12px;
                         left: 12px;
                       }
+
+                      
     
                       &--spen1{
                         width: 34px;
@@ -290,6 +292,10 @@
                         position: absolute;
                         top: 12px;
                         left: 12px;
+                      }
+
+                      .new{
+                        background: #0F6;
                       }
     
                       &--spen1{
