--- a/style.scss
+++ b/style.scss
@@ -12,3 +12,4 @@
 @import "./scss/cart/all";
 @import "./scss/chec-out/chec-out-all";
 @import "./scss/accaunt/all";
+@import "./scss/praduct/praduct-all";
