--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ body {
   width: 0;
 }
 
-#accaunt__main .accaunt__main--wrapper--right--form--btn button, #checout__intro .checout__intro--wrzpper--form--right--itim--list button, #cart__main .cart__main--wrapper--card4--right button, #cart__main .cart__main--wrapper--card4--left button, #login__intro .login--intro--wrapper--right form div button, #siginup__intro .siginup--intro--wrapper--right form .googl-btn, #siginup__intro .siginup--intro--wrapper--right form button, #products .products__wrapper--btn button, #acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
+#praduct__main .praduct__main--wrapper--right--card1 button, #accaunt__main .accaunt__main--wrapper--right--form--btn button, #checout__intro .checout__intro--wrzpper--form--right--itim--list button, #cart__main .cart__main--wrapper--card4--right button, #cart__main .cart__main--wrapper--card4--left button, #login__intro .login--intro--wrapper--right form div button, #siginup__intro .siginup--intro--wrapper--right form .googl-btn, #siginup__intro .siginup--intro--wrapper--right form button, #products .products__wrapper--btn button, #acardyon .acardyon__wrapper--titil button, #month .month__wrapper--top--button button, #today .today__wrapper--btn button {
   display: inline-flex;
   padding: 16px 48px;
   justify-content: center;
@@ -340,7 +340,7 @@ body {
   border: 1px solid #DB4444;
   transition: all 0.2s linear;
 }
-#accaunt__main .accaunt__main--wrapper--right--form--btn button:hover, #checout__intro .checout__intro--wrzpper--form--right--itim--list button:hover, #cart__main .cart__main--wrapper--card4--right button:hover, #cart__main .cart__main--wrapper--card4--left button:hover, #login__intro .login--intro--wrapper--right form div button:hover, #siginup__intro .siginup--intro--wrapper--right form .googl-btn:hover, #siginup__intro .siginup--intro--wrapper--right form button:hover, #products .products__wrapper--btn button:hover, #acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
+#praduct__main .praduct__main--wrapper--right--card1 button:hover, #accaunt__main .accaunt__main--wrapper--right--form--btn button:hover, #checout__intro .checout__intro--wrzpper--form--right--itim--list button:hover, #cart__main .cart__main--wrapper--card4--right button:hover, #cart__main .cart__main--wrapper--card4--left button:hover, #login__intro .login--intro--wrapper--right form div button:hover, #siginup__intro .siginup--intro--wrapper--right form .googl-btn:hover, #siginup__intro .siginup--intro--wrapper--right form button:hover, #products .products__wrapper--btn button:hover, #acardyon .acardyon__wrapper--titil button:hover, #month .month__wrapper--top--button button:hover, #today .today__wrapper--btn button:hover {
   cursor: pointer;
   background: transparent;
   color: #000;
@@ -2313,6 +2313,9 @@ footer .footer__top--titil--list--logos span:hover {
   top: 12px;
   left: 12px;
 }
+#wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top .new {
+  background: #0F6;
+}
 #wishlist__intro .wishlist__intro--wrapper--botton--cards--card--top--spen1 {
   width: 34px;
   height: 34px;
@@ -2820,7 +2823,7 @@ footer .footer__top--titil--list--logos span:hover {
 }
 #accaunt__main .accaunt__main--wrapper--left ul li p:hover {
   cursor: pointer;
-  color: #DB4444;
+  color: #f81c1c;
   transition: all 0.2s linear;
 }
 #accaunt__main .accaunt__main--wrapper--left ul li .activ {
@@ -2907,4 +2910,251 @@ footer .footer__top--titil--list--logos span:hover {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+}
+#praduct__main {
+  width: 100%;
+  padding-bottom: 140px;
+}
+#praduct__main .praduct__main--wrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+#praduct__main .praduct__main--wrapper--left--itim {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+  list-style: none;
+}
+#praduct__main .praduct__main--wrapper--left--itim--list {
+  display: flex;
+  width: 170px;
+  height: 138px;
+  padding: 20px 29px 21px 29px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  background: var(--Secondary, #F5F5F5);
+}
+#praduct__main .praduct__main--wrapper--main {
+  width: 500px;
+  height: 600px;
+  margin-left: 30px;
+}
+#praduct__main .praduct__main--wrapper--main .swiper {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  background: var(--Secondary, #F5F5F5);
+  display: flex;
+  width: 500px;
+  padding: 154px 0px 131px;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+#praduct__main .praduct__main--wrapper--main .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#praduct__main .praduct__main--wrapper--right {
+  width: 400px;
+  margin-left: 70px;
+}
+#praduct__main .praduct__main--wrapper--right h2 {
+  color: var(--Text2, #000);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+  margin-bottom: 16px;
+}
+#praduct__main .praduct__main--wrapper--right p {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 17px;
+}
+#praduct__main .praduct__main--wrapper--right p span:nth-child(1) {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#praduct__main .praduct__main--wrapper--right p span:nth-child(3) {
+  color: var(--Button1, #0F6);
+}
+#praduct__main .praduct__main--wrapper--right h3 {
+  color: var(--Text2, #000);
+  /* Heading/24PX Regular */
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 100% */
+  letter-spacing: 0.72px;
+  margin-bottom: 24px;
+}
+#praduct__main .praduct__main--wrapper--right article {
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid rgb(111, 111, 111);
+  margin-bottom: 24px;
+}
+#praduct__main .praduct__main--wrapper--right h4 {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  color: #000;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.6px;
+  margin-bottom: 24px;
+}
+#praduct__main .praduct__main--wrapper--right h4 div {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+#praduct__main .praduct__main--wrapper--right h4 div span {
+  display: flex;
+  width: 32px;
+  height: 32px;
+  padding: 6px 0px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+#praduct__main .praduct__main--wrapper--right h4 div span:hover {
+  color: #FFF;
+  background: #DB4444;
+  border: 1px solid #DB4444;
+  cursor: pointer;
+}
+#praduct__main .praduct__main--wrapper--right h4 div .activ {
+  color: #FFF;
+  background: #DB4444;
+  border: 1px solid #DB4444;
+  cursor: pointer;
+}
+#praduct__main .praduct__main--wrapper--right--card1 {
+  display: flex;
+  align-items: center;
+  gap: 18px;
+}
+#praduct__main .praduct__main--wrapper--right--card1 button {
+  width: 165px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  padding: 11px 48px;
+}
+#praduct__main .praduct__main--wrapper--right--card1 span {
+  display: flex;
+  width: 40px;
+  height: 40px;
+  padding: 4px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  transition: all 0.2s linear;
+}
+#praduct__main .praduct__main--wrapper--right--card1 span:hover {
+  cursor: pointer;
+  background: #DB4444;
+  border: 1px solid #DB4444;
+  transition: all 0.2s linear;
+}
+#praduct__main .praduct__main--wrapper--right--card1 span:hover svg path {
+  stroke: #FFF;
+}
+#praduct__main .praduct__main--wrapper--right--card2 {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  width: 399px;
+  height: 90px;
+  padding: 24px 16px;
+  flex-shrink: 0;
+  border-radius: 4px 4px 0px 0px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+  margin-top: 40px;
+}
+#praduct__main .praduct__main--wrapper--right--card2 div {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 8px;
+}
+#praduct__main .praduct__main--wrapper--right--card2 div h3 {
+  display: block;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  margin: 0;
+}
+#praduct__main .praduct__main--wrapper--right--card2 div p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px; /* 150% */
+  text-decoration-line: underline;
+}
+#praduct__main .praduct__main--wrapper--right--card3 {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  width: 399px;
+  height: 90px;
+  padding: 24px 16px;
+  flex-shrink: 0;
+  border-radius: 0px 0px 4px 4px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+#praduct__main .praduct__main--wrapper--right--card3 div {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  row-gap: 8px;
+}
+#praduct__main .praduct__main--wrapper--right--card3 div h3 {
+  display: block;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  margin: 0;
+}
+#praduct__main .praduct__main--wrapper--right--card3 div p {
+  color: #000;
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px; /* 150% */
+  text-decoration-line: underline;
 }/*# sourceMappingURL=style.css.map */
