--- a/scss/accaunt/_accaunt-main.scss
+++ b/scss/accaunt/_accaunt-main.scss
@@ -36,7 +36,7 @@
 
                         &:hover{
                             cursor: pointer;
-                            color: #DB4444;
+                            color: #f81c1c;
                             transition: all .2s linear;
                         }
                     }
